--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?color_snake=green&color_dots=#00ff00,#00ef00,#00df00,#00cf00,#00a00ff
+            dist/github-contribution-grid-snake.svg?color_snake=green
+            dist/github-contribution-grid-snake-dark.svg?color_snake=green&color_dots=#00bf00,#00cf00,#00df00,#00ef00,#00ff00
             
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
