--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg?color_snake=#00ff00
+            dist/github-contribution-grid-snake.svg?color_snake=#00ff00&color_dots=#101010,#003f00,#007f00,#00bf00,#00ff00
             dist/github-contribution-grid-snake-dark.svg?color_snake=#00ff00&color_dots=#101010,#003f00,#007f00,#00bf00,#00ff00
             
       # push the content of <build_dir> to a branch
