--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg?color_snake=#00ff00&color_dots=#101010,#003f00,#007f00,#00bf00,#00ff00
-            dist/github-contribution-grid-snake-dark.svg?color_snake=#00ff00&color_dots=#101010,#003f00,#007f00,#00bf00,#00ff00
+            dist/github-contribution-grid-snake.svg?color_snake=#00ff00&color_dots=#f0f0f0,#b4f4b4,#78f878,#3cfb3c,#00ff00
+            dist/github-contribution-grid-snake-dark.svg?color_snake=#00ff00&color_dots=#0f0f0f,#0b4b0b,#088708,#04c304,#00ff00
             
       # push the content of <build_dir> to a branch
       # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
